--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,6 +4,8 @@
 }
 
 
+/*CAMBIAR COSAS OBSOLETAS POR EL BOOTSTRAP*/
+
 .capa{ /*al final no use una imagen por debajo, pero me gusto el tono que le dió*/
     position: fixed;
     width: 100%;
@@ -157,11 +159,12 @@ footer {
     }
     .imagen{
         width: 45vw;
+        margin-top: 1vw;
         margin-left: 1vw;
         margin-right: 1vw;
         border-radius: 5px;
         transition-property: all;
-        transition-duration: 1s;
+        transition-duration: 0.25s;
     }
     
     .imagen:hover{
