--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,28 +1,7 @@
 @charset "UTF-8";
 @media screen and (min-width: 768px) {
-  header {
-    background-color: #222121;
-    margin-top: 0;
-    padding: 30px;
-    display: grid;
-    grid-template-columns: 40% 52%;
-    /*arreglar logo no responsive*/ }
-    header .navegacion {
-      display: grid;
-      border: white  5px double;
-      color: white;
-      background-color: #292828;
-      list-style: none;
-      font-size: large;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      top: 30px;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-column-gap: 0,5fr;
-      justify-items: center;
-      align-items: center;
-      /*li hereda propiedades del padre*/ }
   .imagen {
+    justify-self: center;
     width: 45vw;
     margin-top: 1vw;
     margin-left: 1vw;
@@ -35,11 +14,12 @@
       transform: scale(1.1);
       z-index: 1; }
   .cuerpo {
+    margin-top: 5vh;
     display: grid;
     justify-items: center;
     justify-content: center;
     grid-template-columns: 45vw 45vw;
-    grid-template-rows: 100vh 100vh;
+    grid-template-rows: 90vh 90vh 90vh;
     grid-row-gap: 1vh;
     grid-column-gap: 3vw; }
   .cuerpoEmpre {
@@ -49,15 +29,55 @@
     margin-left: 3vw;
     margin-top: 3vh;
     margin-right: 3vw;
+    align-items: center; }
+  .cuerpoObras {
+    display: flex;
+    flex-direction: row;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+    justify-content: center;
+    column-gap: 3vw;
     align-items: center; } }
+
+@media screen and (min-width: 0px) and (max-width: 767px) {
+  .imagen {
+    width: 80vw;
+    margin-top: 2vw;
+    margin-left: 7vw;
+    margin-right: 0vw;
+    border-radius: 5px;
+    justify-self: center;
+    justify-content: center; }
+  .cuerpo {
+    display: flex;
+    margin-top: 12px;
+    row-gap: 12px;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center; }
+  .division, .titulo {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    border: 2px solid #dfa436;
+    margin-top: 2vh;
+    margin-right: 3vw;
+    margin-left: 3vw;
+    height: fit-content; }
+  .cuerpoServ {
+    display: grid;
+    grid-template-rows: 7vh 40vh 40vh 5vh 40vh 40vh;
+    grid-row-gap: 2vh;
+    justify-content: center; } }
 
 * {
   padding: 0;
   margin: 0; }
 
-/*CAMBIAR COSAS OBSOLETAS POR EL BOOTSTRAP*/
+/*CAMBIAR COSAS OBSOLETAS POR EL BOOTSTRAP ->hecho*/
 .capa {
-  /*al final no use una imagen por debajo, pero me gusto el tono que le dió*/
+  /*filtro oscuro*/
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -67,52 +87,32 @@
   left: 0; }
 
 body {
-  background-color: white; }
+  background-color: white;
+  min-height: 100%;
+  /*no funciona en contacto?*/ }
 
 footer {
-  margin-bottom: 0px;
-  padding-top: 3%;
-  background-color: #161212;
-  margin-top: 3%;
-  /*agregar redes sociales (usando flexbox )*/ }
+  /*poner redes en color blanco*/
+  margin-top: 4vh;
+  margin-bottom: 0px; }
 
-.discl {
-  font-size: large;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.division, .titulo {
+  margin-top: 3vh;
+  align-content: center;
+  text-align: center;
   justify-self: center;
-  align-self: center; }
-
-/*AGREGAR ICONO (fixed) PARA VOLVER ARRIBA DE LA PÁGINA*/
-.titulo {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: darkgrey;
-  font-size: large;
-  text-align: left;
-  padding: 3vh; }
-
-a {
-  text-decoration: none;
-  color: blueviolet; }
-
-/* VER QUE COLOR QUEDA MEJOR 
-li{
-    text-decoration: none;
-    color:ghostwhite;
-}
-*/
-.division {
-  display: flex;
-  align-content: center;
-  justify-content: center;
   font-size: large;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
 .titulo {
-  display: flex;
-  align-content: center;
-  justify-content: center;
   font-size: x-large;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+  align-content: center;
+  padding: 3vh;
+  margin-top: 0;
+  background-color: darkgrey; }
+
+.descripcion {
+  width: 40vw; }
 
 .cuerpoDiscl {
   display: flex;
@@ -139,56 +139,7 @@ li{
   margin-top: 5vh; }
 
 .cuerpoCont {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  row-gap: 5vh;
-  margin-top: 5vh; }
-
-@media screen and (min-width: 0px) and (max-width: 767px) {
-  header {
-    background-color: #222121;
-    margin-top: 0;
-    padding: 30px;
-    display: grid;
-    grid-template-rows: 40% 52%;
-    /*Buscar un logo que entre en el header*/
-    /*BUSCAR ICONOS PARA HEADER Y FOOTER*/ }
-  .navegacion {
-    display: grid;
-    border: white  5px double;
-    color: white;
-    background-color: #292828;
-    list-style: none;
-    font-size: large;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    top: 30px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-column-gap: 0,5fr;
-    justify-items: center;
-    align-items: center; }
-  .imagen {
-    width: 80vw;
-    margin-left: 1vw;
-    margin-right: 1vw;
-    border-radius: 5px; }
-  .cuerpo {
-    display: grid;
-    grid-template-rows: 40vh 40vh 40vh 40vh;
-    grid-row-gap: 4vh;
-    justify-content: center; }
-  .division {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    border: 2px solid #dfa436;
-    margin-top: 2vh;
-    margin-right: 3vw;
-    margin-left: 3vw;
-    height: fit-content; }
-  .cuerpoServ {
-    display: grid;
-    grid-template-rows: 7vh 40vh 40vh 5vh 40vh 40vh;
-    grid-row-gap: 2vh;
-    justify-content: center; } }
+  margin-left: 5vw;
+  margin-right: 5vw;
+  margin-top: 3vw;
+  margin-bottom: 3vw; }
