--- a/sass/_movil.scss
+++ b/sass/_movil.scss
@@ -35,4 +35,40 @@
         justify-content: center;
     }
 
+    .cuerpoObras{
+        display: flex;
+        flex-direction: column;
+        /*
+        margin-left: 5vw;
+        margin-right: 5vw;
+        */
+        margin-top: 5vw;
+        margin-bottom: 13vw;
+        justify-content: center;
+        row-gap: 10vw;
+        .carru{
+            width: 95vw;
+            margin-left: 2vw;
+           
+        }
+        .descripcion{
+            margin-left: 5vw;
+            margin-right: 5vw; 
+        }
+    }
+
+    .cuerpoEmpre{
+        display:flex;
+        flex-direction: column;
+        row-gap: 3vw;
+        margin-left: 3vw;
+        margin-top: 3vh;
+        margin-right: 3vw;
+        justify-items: center;
+        .mapa{
+            width: 95vw !important;
+            height: 80vw !important;
+        }
+    }
+
 }
